--- a/src/index.html
+++ b/src/index.html
@@ -1,12 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Snake</title>
-</head>
-<body>
-    hello
-</body>
+  </head>
+  <body>
+    <!-- mian container -->
+    <div id="main">
+      <!-- top stage -->
+      <div id="stage">
+        <!-- snake -->
+        <div id="snake">
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
+        </div>
+        <!-- food -->
+        <div id="food">
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+        </div>
+      </div>
+
+      <!-- bottom score -->
+      <div id="msg-bar">
+        <div>SCORE: <span id="score">0</span></div>
+        <div>LEVEL: <span id="level">1</span></div>
+      </div>
+    </div>
+  </body>
 </html>
